[tool.poetry]
name = "llm-demo-app"
version = "0.1.0"
description = ""
authors = ["ferozcr7 <ferof3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "1.39.0"
pandas = "2.2.3"
plotly = "5.24.1"
openpyxl = "3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
